1. Figured out how to make contains work properly with overwritten equals 2. Made two working commands - createmember and ShowAllMembersCommand 3. optimized some code where i saw as good 4. finally tested first two commands and made them to work properly